@@ -21,6 +21,7 @@
   20. Sailing Ships now get area weather messages and affects
   21. Default autoreaction shopkeepers will now adjust prices based on faction.
   22. Legal system now supports punishment caps on repeat crimes.
+  23. New Locale type: Whirlpool.
 # Build 5.9.1 Released 01/04/2016
    1. "Who accounts", used by an archon, can quickly list the account name of each player online.
    2. New Achievement event "GOTITEM", and new rewards (see new stats below and achievements.ini)
